refactor: unify enum naming and improve sales order mapper consistency